--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -70,6 +70,14 @@
             "no-schedule": "The doctor does not have an appointment at this time, please choose another time",
             "choose": "Choose ",
             "book-free": " and book (free)"
+        },
+        "extra-infor-doctor": {
+            "text-address": "Clinic address",
+            "price": "EXAMINATION PRICE:",
+            "detail": "More Details",
+            "pricenone": "Price",
+            "hidden": "Hide price list",
+            "method": "The patient can pay the cost in the form of: "
         }
     },
     "admin": {
