--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -78,6 +78,20 @@
             "pricenone": "Price",
             "hidden": "Hide price list",
             "method": "The patient can pay the cost in the form of: "
+        },
+        "booking-modal": {
+            "title": "Booking a medical appointment",
+            "name": "Fullname",
+            "phone": "Phone Number",
+            "email": "Email",
+            "address": "Address",
+            "reason": "Reason for examination",
+            "DOB": "Date of birth",
+            "gender": "Gender",
+            "confirm": "Confirm",
+            "cancel": "Cancel",
+            "free-booking": "Free Booking",
+            "price-booking": "Price: "
         }
     },
     "admin": {
